Add linking between pages

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,6 +6,8 @@
     <title>Pizza Recipe</title>
 </head>
 <body>
+    <a href="../index.html">Back to Home</a>
     <h1>How to make pizza</h1>
+    
 </body>
 </html>
