Add recipes with correspondent images

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,6 +8,25 @@
 <body>
     <a href="../index.html">Back to Home</a>
     <h1>How to make pizza</h1>
-    
+    <img src="../images/tacopizza.jpg" alt="An image of a taco pizza">
+    <p>Everybody loves pizza. Everybody loves tacos. Do you love taco pizzas? Find out here with this easy recipe!</p>
+    <p>You don't need lots of ingredients or experience with cooking, making this a dish for everybody.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>10 fluid ounces warm water</li>
+        <li>1 (6 ounce) can tomato paste</li>
+        <li>¼ cup chopped onion</li>
+        <li>½ pound ground beef</li>
+        <li>4 cups shredded Cheddar cheese</li>
+    </ul>
+    <h2>Preparation</h2>
+    <ol>
+        <li>Add water, salt, oil, flour and yeast to your bread machine in the order listed.</li>
+        <li>Meanwhile, in a small bowl, combine tomato paste, water, and 3/4 of the package of taco seasoning mix</li>
+        <li>Cook ground beef in a large skillet over medium heat</li>
+        <li>Preheat the oven to 400 degrees</li>
+        <li>...</li>
+        <p>To unlock the rest of this recipe, you have to be a subscriber. Join now for only $29,99 per day!</p>
+    </ol>
 </body>
 </html>
