--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Liam's Recipes</h1>
-    <a href="./recipes/pizza.html">Pizza</a>
+    <ul>
+        <li><a href="./recipes/pizza.html">Taco Pizza</a></li>
+        <li><a href="./recipes/burrito.html">Breakfast Burrito</a></li>
+        <li><a href="./recipes/pita.html">Breakfast Pita</a></li>
+    </ul>
 </body>
 </html>
